--- a/style.css
+++ b/style.css
@@ -347,7 +347,11 @@ nav .fas{
 
 
 @media only screen and (max-width: 600px)
-{
+{    
+    body{
+        background-color: darkblue;
+        color: #fff;
+    }
     .header-text{
         margin-top: 100%;
         font-size: 16px;
