--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ nav .fas{
 @media only screen and (max-width: 600px)
 {    
     body{
-        background-color: darkblue;
+        background-color: #080808;
         color: #fff;
     }
     .header-text{
